--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
-.test {
-  background: #00ffff;
+.homepagetext {
+	margin: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+    padding-left: 6px;
+    height: 35px;
+    width: 140px;
+    background-color: black;
+    color: yellow;
+}
+.homepagebody {
+	margin: 5px 0px ;
+	padding-left: 430px;
+}
+.aboutustext {
+	margin: auto;
+	margin-top: 20px;
+	margin-bottom: 10px;
+    padding-left: 6px;
+    height: 35px;
+    width: 145px;
+    background-color: black;
+    color: yellow;
+}
+.aboutusbody {
+	margin: 2px 0px ;
+	padding-left: 430px;
+}
+.aboutusbodyalt {
+	margin: auto ;
+	margin-top: 5
+	margin-top: 150px;
+	padding-left: 430px;
+}
+.footing  ; 
+    margin: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+    padding-left: 6px
+    heighht	: 35px;
+    width: 140px;
+    background-color: black;
+    color: yellow;
 }
